--- a/packages/master_bed_lights.yaml
+++ b/packages/master_bed_lights.yaml
@@ -127,6 +127,7 @@ light:
 automation:
   ### Turn off the lights when OFF is selected
   - alias: Under Bed Select Off
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: state
@@ -154,6 +155,7 @@ automation:
   #####################################################################
   ### Reset input selection when lamp is turned off
   - alias: Under Bed Reset Off
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: state
@@ -180,6 +182,7 @@ automation:
   #####################################################################
   ### Default to Crystal if turned on with no selection
   - alias: Under Bed Default Crystal
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: state
@@ -207,6 +210,7 @@ automation:
   #####################################################################
   ### Under Bed Select Blue
   - alias: Under Bed Blue
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -229,6 +233,7 @@ automation:
   #####################################################################
   ### Under Bed Select Cyan
   - alias: Under Bed Cyan
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -251,6 +256,7 @@ automation:
   #####################################################################
   ### Under Bed Select Crystal
   - alias: Under Bed Crystal
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -272,6 +278,7 @@ automation:
   #####################################################################
   ### Under Bed Select Green
   - alias: Under Bed Green
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -294,6 +301,7 @@ automation:
   #####################################################################
   ### Under Bed Select Pink
   - alias: Under Bed Pink
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -316,6 +324,7 @@ automation:
   #####################################################################
   ### Under Bed Select Red
   - alias: Under Bed Red
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -338,6 +347,7 @@ automation:
   #####################################################################
   ### Under Bed Select Violet
   - alias: Under Bed Violet
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -360,6 +370,7 @@ automation:
   #####################################################################
   ### Under Bed Select Yellow
   - alias: Under Bed Yellow
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -382,6 +393,7 @@ automation:
   #####################################################################
   ### Under Bed Effects -  Color Loop
   - alias: Under Bed Color Loop
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -403,6 +415,7 @@ automation:
   #####################################################################
   ### Under Bed Effects -  Color Jump
   - alias: Under Bed Color Jump
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -424,6 +437,7 @@ automation:
   #####################################################################
   ### Under Bed Effects -  Random
   - alias: Under Bed Random
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -445,6 +459,7 @@ automation:
   #####################################################################
   ### Under Bed Effects -  Red Fade
   - alias: Under Bed Red Fade
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -466,6 +481,7 @@ automation:
   #####################################################################
   ### Under Bed Effects -  Green Fade
   - alias: Under Bed Green Fade
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -487,6 +503,7 @@ automation:
   #####################################################################
   ### Under Bed Effects -  Blue Fade
   - alias: Under Bed Blue Fade
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -508,6 +525,7 @@ automation:
   #####################################################################
   ### Under Bed Effects -  Yellow Fade
   - alias: Under Bed Yellow Fade
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -529,6 +547,7 @@ automation:
   #####################################################################
   ### Under Bed Effects -  Purple Fade
   - alias: Under Bed Purple Fade
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -550,6 +569,7 @@ automation:
   #####################################################################
   ### Under Bed Effects -  White Fade
   - alias: Under Bed Cyan Fade
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -571,6 +591,7 @@ automation:
   #####################################################################
   ### Under Bed Effects -  Red/Green Cross Fade
   - alias: Under Bed RG Cross Fade
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -592,6 +613,7 @@ automation:
   #####################################################################
   ### Under Bed Effects -  Red/Blue Cross Fade
   - alias: Under Bed RB Cross Fade
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -613,6 +635,7 @@ automation:
   #####################################################################
   ### Under Bed Effects -  Green/Blue Cross Fade
   - alias: Under Bed GB Cross Fade
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -634,6 +657,7 @@ automation:
   #####################################################################
   ### Under Bed Strobe -  Color Strobe
   - alias: Under Bed Color Strobe
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -655,6 +679,7 @@ automation:
   #####################################################################
   ### Under Bed Strobe -  Red Strobe
   - alias: Under Bed Red Strobe
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -676,6 +701,7 @@ automation:
   #####################################################################
   ### Under Bed Strobe -  Green Strobe
   - alias: Under Bed Color Strobe
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -697,6 +723,7 @@ automation:
   #####################################################################
   ### Under Bed Strobe -  Blue Strobe
   - alias: Under Bed Blue Strobe
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -718,6 +745,7 @@ automation:
   #####################################################################
   ### Under Bed Strobe -  Yellow Strobe
   - alias: Under Bed Yellow Strobe
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -739,6 +767,7 @@ automation:
   #####################################################################
   ### Under Bed Strobe -  Cyan Strobe
   - alias: Under Bed Cyan Strobe
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -760,6 +789,7 @@ automation:
   #####################################################################
   ### Under Bed Strobe -  Purple Strobe
   - alias: Under Bed Purple Strobe
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
@@ -781,6 +811,7 @@ automation:
   #####################################################################
   ### Under Bed Strobe -  White Strobe
   - alias: Under Bed White Strobe
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: state
