--- a/packages/states.yaml
+++ b/packages/states.yaml
@@ -62,16 +62,12 @@ input_boolean:
     name: After Hours
     icon: mdi:clock
 
-  bedtime:
-    name: Bedtime
-    icon: mdi:hotel
-
-
 #####################################################################
 ### Automation
 #####################################################################
 automation:
   - alias: peak hours on
+    initial_state: 'on'
     trigger:
       - platform: time
         at: '15:00:00'
@@ -96,6 +92,7 @@ automation:
 
 
   - alias: peak hours off
+    initial_state: 'on'
     trigger:
       - platform: time
         at: '18:00:00'
@@ -117,6 +114,7 @@ automation:
 
 
   - alias: after hours on weekdays
+    initial_state: 'on'
     trigger:
       - platform: time
         at: '23:30:00'
@@ -137,6 +135,7 @@ automation:
 
 
   - alias: after hours off weekdays
+    initial_state: 'on'
     trigger:
       - platform: time
         at: '04:00:00'
@@ -157,6 +156,7 @@ automation:
 
 
   - alias: after hours on weekends
+    initial_state: 'on'
     trigger:
       - platform: time
         at: '01:00:00'
@@ -174,6 +174,7 @@ automation:
 
 
   - alias: after hours off weekends
+    initial_state: 'on'
     trigger:
       - platform: time
         at: '08:00:00'
@@ -188,40 +189,3 @@ automation:
       - service: input_boolean.turn_off
         data:
           entity_id: input_boolean.after_hours
-
-
-  - alias: bedtime off weekdays
-    trigger:
-      - platform: time
-        at: '04:00:00'
-
-    condition:
-      - condition: time
-        weekday:
-          - mon
-          - tue
-          - wed
-          - thu
-          - fri
-
-    action:
-      - service: input_boolean.turn_off
-        data:
-          entity_id: input_boolean.bedtime
-
-
-  - alias: bedtime off weekends
-    trigger:
-      - platform: time
-        at: '08:00:00'
-
-    condition:
-      - condition: time
-        weekday:
-          - sat
-          - sun
-
-    action:
-      - service: input_boolean.turn_off
-        data:
-          entity_id: input_boolean.bedtime
