--- a/packages/weather.yaml
+++ b/packages/weather.yaml
@@ -316,6 +316,7 @@ sensor:
 #####################################################################
 automation:
   - alias: rain sensor
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: state
