--- a/packages/accent_lights.yaml
+++ b/packages/accent_lights.yaml
@@ -83,6 +83,7 @@ switch:
 #####################################################################
 automation:
   - alias: turn on accent lights at sunset
+    initial_state: 'on'
     trigger:
       - platform: sun
         event: sunset
@@ -94,6 +95,7 @@ automation:
 
 
   - alias: turn off accent lights weekdays
+    initial_state: 'on'
     trigger:
       platform: time
       at: '23:00:00'
@@ -113,6 +115,7 @@ automation:
 
 
   - alias: turn off accent lamps weekends
+    initial_state: 'on'
     trigger:
       platform: time
       at: '01:30:00'
