--- a/packages/kitchen_dining.yaml
+++ b/packages/kitchen_dining.yaml
@@ -88,6 +88,7 @@ group:
 #####################################################################
 automation:
   - alias: kitchen shade raised schedule
+    initial_state: 'on'
     trigger:
       - platform: sun
         event: sunrise
@@ -98,6 +99,7 @@ automation:
         entity_id: cover.kitchen_roller_shade_level
 
   - alias: kitchen shade lowered schedule
+    initial_state: 'on'
     trigger:
       - platform: time
         at: '21:00:00'
