--- a/packages/light_control.yaml
+++ b/packages/light_control.yaml
@@ -77,6 +77,7 @@ homeassistant:
 #####################################################################
 automation:
   - alias: light_control_reset
+    initial_state: 'on'
     trigger:
       - platform: time
         seconds: '/5'
