--- a/packages/living_room_media.yaml
+++ b/packages/living_room_media.yaml
@@ -284,6 +284,7 @@ script:
 #####################################################################
 automation:
   - alias: Kodi Scene Set
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: state
@@ -314,6 +315,7 @@ automation:
 
 
   - alias: living_room_tv_input_selector
+    initial_state: 'on'
     trigger:
       - platform: state
         entity_id: input_select.living_room_tv_input
@@ -336,6 +338,7 @@ automation:
 
 
   - alias: onkyo_amp_input_selector
+    initial_state: 'on'
     trigger:
       - platform: state
         entity_id: input_select.onkyo_amp_input
