--- a/packages/master_bedroom.yaml
+++ b/packages/master_bedroom.yaml
@@ -43,18 +43,20 @@ homeassistant:
       friendly_name: "Master Bedroom Reading Lamp"
       icon: mdi:lamp
 
+    light.master_bed_ceiling_level:
+      friendly_name: "Master Bedroom Ceiling Lights"
+      icon: mdi:white-balance-incandescent
+
+    light.master_bed_entry_level:
+      friendly_name: "Master Bedroom Entry Lights"
+      icon: mdi:white-balance-incandescent
+
     ################################################
     ## Media Player
     ################################################
     media_player.kodi_bedroom:
       <<: *contained
       friendly_name: "Bedroom Kodi"
-
-    ################################################
-    ## Input Boolean
-    ################################################
-    input_boolean.bedtime:
-      <<: *contained
 
     ################################################
     ## Script
@@ -77,6 +79,8 @@ group:
       - script.mbr_night_light
       - light.master_bedroom_chandelier_level
       - light.master_sitting_lamp
+      - light.master_bed_entry_level
+      - light.master_bed_ceiling_level
       # humidifier
       - switch.switch_two
 
@@ -153,6 +157,7 @@ script:
 #####################################################################
 automation:
   - alias: Turn off Humidifier
+    initial_state: 'on'
     hide_entity: True
     trigger:
       platform: time
