--- a/packages/master_bedroom_fan.yaml
+++ b/packages/master_bedroom_fan.yaml
@@ -189,6 +189,7 @@ script:
 automation:
   ## turn the master bed fan off at noon each day
   - alias: turn off master bedroom fan
+    initial_state: 'on'
     trigger:
       - platform: time
         at: '12:00:00'
@@ -202,6 +203,7 @@ automation:
 
   ## select a fan speed
   - alias: master_bedroom_fan_speed_selector
+    initial_state: 'on'
     trigger:
       - platform: state
         entity_id: input_select.master_bedroom_fan_speed
@@ -230,6 +232,7 @@ automation:
 
   ## select fan options
   - alias: master_bedroom_fan_option_selector
+    initial_state: 'on'
     trigger:
       - platform: state
         entity_id: input_select.master_bedroom_fan_options
@@ -252,6 +255,7 @@ automation:
 
   ## fan auto-high
   - alias: master_bedroom_fan_auto_high
+    initial_state: 'on'
     trigger:
       - platform: state
         entity_id: script.master_bedroom_night_time
