--- a/packages/minimotes.yaml
+++ b/packages/minimotes.yaml
@@ -10,7 +10,7 @@
 automation:
   ### Aeotec zwave minimote #1: zwave.living_room_minimote
   - alias: minimote 1 button 1 short
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -25,7 +25,7 @@ automation:
 
   ###
   - alias: minimote 1 button 1 long
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -40,7 +40,7 @@ automation:
 
   ###
   - alias: minimote 1 button 2 short
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -58,7 +58,7 @@ automation:
 
   ###
   - alias: minimote 1 button 2 long
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -73,7 +73,7 @@ automation:
 
   ###
   - alias: minimote 1 button 3 short
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -91,7 +91,7 @@ automation:
 
   ###
   - alias: minimote 1 button 3 long
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -109,7 +109,7 @@ automation:
 
   ###
   - alias: minimote 1 button 4 short
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -125,7 +125,7 @@ automation:
 
   ###
   - alias: minimote 1 button 4 long
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -140,7 +140,7 @@ automation:
 
   ### Aeotec zwave minimote #2: zwave.master_bedroom_minimote
   - alias: minimote 2 button 1 short
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -158,7 +158,7 @@ automation:
 
   ###
   - alias: minimote 2 button 1 long
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -178,7 +178,7 @@ automation:
 
   ###
   - alias: minimote 2 button 2 short
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -192,7 +192,7 @@ automation:
 
   ###
   - alias: minimote 2 button 2 long
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -208,7 +208,7 @@ automation:
 
   ###
   - alias: minimote 2 button 3 short
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -224,7 +224,7 @@ automation:
 
   ###
   - alias: minimote 2 button 3 long
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -240,7 +240,7 @@ automation:
 
   ###
   - alias: minimote 2 button 4 short
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
@@ -254,7 +254,7 @@ automation:
 
   ###
   - alias: minimote 2 button 4 long
-    initial_state: True
+    initial_state: 'on'
     hide_entity: True
     trigger:
       - platform: event
